--- a/_data/albums.yml
+++ b/_data/albums.yml
@@ -22,7 +22,7 @@
   released: 2024-09-13
   minutes: 39
 
-- title: Musho Mistrist
+- title: Musho Mistrust
   artist: Fake Fruit
   rank: 3
   artwork: https://lh3.googleusercontent.com/39uSCj11WsH1hGHlJec8Q4dZZIh1w54bG-0b_om8RwBELad5q88IsCsXLRN1GPD4SjCOH_mwvQqe-rIu
